source/commons/parsers/antlrparser/parsetestParser.cpp

// Generated from parsetest.g4 by ANTLR 4.10.1


#include "parsetestVisitor.h"

#include "parsetestParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ParsetestParserStaticData final {
  ParsetestParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ParsetestParserStaticData(const ParsetestParserStaticData&) = delete;
  ParsetestParserStaticData(ParsetestParserStaticData&&) = delete;
  ParsetestParserStaticData& operator=(const ParsetestParserStaticData&) = delete;
  ParsetestParserStaticData& operator=(ParsetestParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag parsetestParserOnceFlag;
ParsetestParserStaticData *parsetestParserStaticData = nullptr;

void parsetestParserInitialize() {
  assert(parsetestParserStaticData == nullptr);
  auto staticData = std::make_unique<ParsetestParserStaticData>(
    std::vector<std::string>{
      "program", "sequence", "item", "var", "lvalueSpecs", "lvalue", "fakeLvalue", 
      "assignment", "reference", "term", "expression", "list", "funcall", 
      "conditional", "nullify"
    },
    std::vector<std::string>{
      "", "", "'if'", "'then'", "'else'", "", "", "')'", "':'", "'*'", "';'", 
      "'='", "'\\n'", "", "", "'+'", "", "'-'"
    },
    std::vector<std::string>{
      "", "NUMBER", "IF", "THEN", "ELSE", "FUNCTION", "VAR", "CLOSED", "NTH", 
      "TIMES", "NULLIFY", "ASSIGN", "EOL", "WHITESPACE", "PLUS", "UPLUS", 
      "MINUS", "UMINUS", "OPEN", "PARAMS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  parsetestParserStaticData = staticData.release();
}

}

parsetestParser::parsetestParser(TokenStream *input) : parsetestParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

parsetestParser::parsetestParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  parsetestParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *parsetestParserStaticData->atn, parsetestParserStaticData->decisionToDFA, parsetestParserStaticData->sharedContextCache, options);
}

parsetestParser::~parsetestParser() {
  delete _interpreter;
}

const atn::ATN& parsetestParser::getATN() const {
  return *parsetestParserStaticData->atn;
}

std::string parsetestParser::getGrammarFileName() const {
  return "parsetest.g4";
}

const std::vector<std::string>& parsetestParser::getRuleNames() const {
  return parsetestParserStaticData->ruleNames;
}

const dfa::Vocabulary& parsetestParser::getVocabulary() const {
  return parsetestParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView parsetestParser::getSerializedATN() const {
  return parsetestParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

parsetestParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

parsetestParser::SequenceContext* parsetestParser::ProgramContext::sequence() {
  return getRuleContext<parsetestParser::SequenceContext>(0);
}

tree::TerminalNode* parsetestParser::ProgramContext::EOF() {
  return getToken(parsetestParser::EOF, 0);
}


size_t parsetestParser::ProgramContext::getRuleIndex() const {
  return parsetestParser::RuleProgram;
}


std::any parsetestParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::ProgramContext* parsetestParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, parsetestParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    sequence();
    setState(31);
    match(parsetestParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SequenceContext ------------------------------------------------------------------

parsetestParser::SequenceContext::SequenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<parsetestParser::ListContext *> parsetestParser::SequenceContext::list() {
  return getRuleContexts<parsetestParser::ListContext>();
}

parsetestParser::ListContext* parsetestParser::SequenceContext::list(size_t i) {
  return getRuleContext<parsetestParser::ListContext>(i);
}

std::vector<parsetestParser::NullifyContext *> parsetestParser::SequenceContext::nullify() {
  return getRuleContexts<parsetestParser::NullifyContext>();
}

parsetestParser::NullifyContext* parsetestParser::SequenceContext::nullify(size_t i) {
  return getRuleContext<parsetestParser::NullifyContext>(i);
}


size_t parsetestParser::SequenceContext::getRuleIndex() const {
  return parsetestParser::RuleSequence;
}


std::any parsetestParser::SequenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitSequence(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::SequenceContext* parsetestParser::sequence() {
  SequenceContext *_localctx = _tracker.createInstance<SequenceContext>(_ctx, getState());
  enterRule(_localctx, 2, parsetestParser::RuleSequence);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(33);
      list();
      setState(35);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == parsetestParser::NULLIFY) {
        setState(34);
        nullify();
      }
      setState(39); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << parsetestParser::NUMBER)
      | (1ULL << parsetestParser::IF)
      | (1ULL << parsetestParser::FUNCTION)
      | (1ULL << parsetestParser::VAR)
      | (1ULL << parsetestParser::UPLUS)
      | (1ULL << parsetestParser::UMINUS)
      | (1ULL << parsetestParser::OPEN))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ItemContext ------------------------------------------------------------------

parsetestParser::ItemContext::ItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t parsetestParser::ItemContext::getRuleIndex() const {
  return parsetestParser::RuleItem;
}

void parsetestParser::ItemContext::copyFrom(ItemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ItemNumberContext ------------------------------------------------------------------

tree::TerminalNode* parsetestParser::ItemNumberContext::NUMBER() {
  return getToken(parsetestParser::NUMBER, 0);
}

parsetestParser::ItemNumberContext::ItemNumberContext(ItemContext *ctx) { copyFrom(ctx); }


std::any parsetestParser::ItemNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitItemNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ItemSequenceContext ------------------------------------------------------------------

tree::TerminalNode* parsetestParser::ItemSequenceContext::OPEN() {
  return getToken(parsetestParser::OPEN, 0);
}

parsetestParser::SequenceContext* parsetestParser::ItemSequenceContext::sequence() {
  return getRuleContext<parsetestParser::SequenceContext>(0);
}

tree::TerminalNode* parsetestParser::ItemSequenceContext::CLOSED() {
  return getToken(parsetestParser::CLOSED, 0);
}

parsetestParser::ItemSequenceContext::ItemSequenceContext(ItemContext *ctx) { copyFrom(ctx); }


std::any parsetestParser::ItemSequenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitItemSequence(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ItemFuncallContext ------------------------------------------------------------------

parsetestParser::FuncallContext* parsetestParser::ItemFuncallContext::funcall() {
  return getRuleContext<parsetestParser::FuncallContext>(0);
}

parsetestParser::ItemFuncallContext::ItemFuncallContext(ItemContext *ctx) { copyFrom(ctx); }


std::any parsetestParser::ItemFuncallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitItemFuncall(this);
  else
    return visitor->visitChildren(this);
}
parsetestParser::ItemContext* parsetestParser::item() {
  ItemContext *_localctx = _tracker.createInstance<ItemContext>(_ctx, getState());
  enterRule(_localctx, 4, parsetestParser::RuleItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case parsetestParser::NUMBER: {
        _localctx = _tracker.createInstance<parsetestParser::ItemNumberContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(41);
        match(parsetestParser::NUMBER);
        break;
      }

      case parsetestParser::OPEN: {
        _localctx = _tracker.createInstance<parsetestParser::ItemSequenceContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(42);
        match(parsetestParser::OPEN);
        setState(43);
        sequence();
        setState(44);
        match(parsetestParser::CLOSED);
        break;
      }

      case parsetestParser::FUNCTION:
      case parsetestParser::UPLUS:
      case parsetestParser::UMINUS: {
        _localctx = _tracker.createInstance<parsetestParser::ItemFuncallContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(46);
        funcall();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarContext ------------------------------------------------------------------

parsetestParser::VarContext::VarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* parsetestParser::VarContext::VAR() {
  return getToken(parsetestParser::VAR, 0);
}


size_t parsetestParser::VarContext::getRuleIndex() const {
  return parsetestParser::RuleVar;
}


std::any parsetestParser::VarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitVar(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::VarContext* parsetestParser::var() {
  VarContext *_localctx = _tracker.createInstance<VarContext>(_ctx, getState());
  enterRule(_localctx, 6, parsetestParser::RuleVar);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(parsetestParser::VAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LvalueSpecsContext ------------------------------------------------------------------

parsetestParser::LvalueSpecsContext::LvalueSpecsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> parsetestParser::LvalueSpecsContext::NTH() {
  return getTokens(parsetestParser::NTH);
}

tree::TerminalNode* parsetestParser::LvalueSpecsContext::NTH(size_t i) {
  return getToken(parsetestParser::NTH, i);
}

std::vector<parsetestParser::ItemContext *> parsetestParser::LvalueSpecsContext::item() {
  return getRuleContexts<parsetestParser::ItemContext>();
}

parsetestParser::ItemContext* parsetestParser::LvalueSpecsContext::item(size_t i) {
  return getRuleContext<parsetestParser::ItemContext>(i);
}

std::vector<parsetestParser::VarContext *> parsetestParser::LvalueSpecsContext::var() {
  return getRuleContexts<parsetestParser::VarContext>();
}

parsetestParser::VarContext* parsetestParser::LvalueSpecsContext::var(size_t i) {
  return getRuleContext<parsetestParser::VarContext>(i);
}

std::vector<parsetestParser::ConditionalContext *> parsetestParser::LvalueSpecsContext::conditional() {
  return getRuleContexts<parsetestParser::ConditionalContext>();
}

parsetestParser::ConditionalContext* parsetestParser::LvalueSpecsContext::conditional(size_t i) {
  return getRuleContext<parsetestParser::ConditionalContext>(i);
}

std::vector<parsetestParser::NullifyContext *> parsetestParser::LvalueSpecsContext::nullify() {
  return getRuleContexts<parsetestParser::NullifyContext>();
}

parsetestParser::NullifyContext* parsetestParser::LvalueSpecsContext::nullify(size_t i) {
  return getRuleContext<parsetestParser::NullifyContext>(i);
}


size_t parsetestParser::LvalueSpecsContext::getRuleIndex() const {
  return parsetestParser::RuleLvalueSpecs;
}


std::any parsetestParser::LvalueSpecsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitLvalueSpecs(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::LvalueSpecsContext* parsetestParser::lvalueSpecs() {
  LvalueSpecsContext *_localctx = _tracker.createInstance<LvalueSpecsContext>(_ctx, getState());
  enterRule(_localctx, 8, parsetestParser::RuleLvalueSpecs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(60); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(52);
              _errHandler->sync(this);

              _la = _input->LA(1);
              if (_la == parsetestParser::NULLIFY) {
                setState(51);
                nullify();
              }
              setState(54);
              match(parsetestParser::NTH);
              setState(58);
              _errHandler->sync(this);
              switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
              case 1: {
                setState(55);
                item();
                break;
              }

              case 2: {
                setState(56);
                var();
                break;
              }

              case 3: {
                setState(57);
                conditional();
                break;
              }

              default:
                break;
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(62); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LvalueContext ------------------------------------------------------------------

parsetestParser::LvalueContext::LvalueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

parsetestParser::VarContext* parsetestParser::LvalueContext::var() {
  return getRuleContext<parsetestParser::VarContext>(0);
}

parsetestParser::LvalueSpecsContext* parsetestParser::LvalueContext::lvalueSpecs() {
  return getRuleContext<parsetestParser::LvalueSpecsContext>(0);
}


size_t parsetestParser::LvalueContext::getRuleIndex() const {
  return parsetestParser::RuleLvalue;
}


std::any parsetestParser::LvalueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitLvalue(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::LvalueContext* parsetestParser::lvalue() {
  LvalueContext *_localctx = _tracker.createInstance<LvalueContext>(_ctx, getState());
  enterRule(_localctx, 10, parsetestParser::RuleLvalue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    var();
    setState(66);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(65);
      lvalueSpecs();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FakeLvalueContext ------------------------------------------------------------------

parsetestParser::FakeLvalueContext::FakeLvalueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

parsetestParser::ItemContext* parsetestParser::FakeLvalueContext::item() {
  return getRuleContext<parsetestParser::ItemContext>(0);
}

parsetestParser::LvalueSpecsContext* parsetestParser::FakeLvalueContext::lvalueSpecs() {
  return getRuleContext<parsetestParser::LvalueSpecsContext>(0);
}


size_t parsetestParser::FakeLvalueContext::getRuleIndex() const {
  return parsetestParser::RuleFakeLvalue;
}


std::any parsetestParser::FakeLvalueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitFakeLvalue(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::FakeLvalueContext* parsetestParser::fakeLvalue() {
  FakeLvalueContext *_localctx = _tracker.createInstance<FakeLvalueContext>(_ctx, getState());
  enterRule(_localctx, 12, parsetestParser::RuleFakeLvalue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    item();
    setState(69);
    lvalueSpecs();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

parsetestParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* parsetestParser::AssignmentContext::ASSIGN() {
  return getToken(parsetestParser::ASSIGN, 0);
}

parsetestParser::ListContext* parsetestParser::AssignmentContext::list() {
  return getRuleContext<parsetestParser::ListContext>(0);
}

parsetestParser::LvalueContext* parsetestParser::AssignmentContext::lvalue() {
  return getRuleContext<parsetestParser::LvalueContext>(0);
}

parsetestParser::FakeLvalueContext* parsetestParser::AssignmentContext::fakeLvalue() {
  return getRuleContext<parsetestParser::FakeLvalueContext>(0);
}

std::vector<tree::TerminalNode *> parsetestParser::AssignmentContext::UPLUS() {
  return getTokens(parsetestParser::UPLUS);
}

tree::TerminalNode* parsetestParser::AssignmentContext::UPLUS(size_t i) {
  return getToken(parsetestParser::UPLUS, i);
}

std::vector<tree::TerminalNode *> parsetestParser::AssignmentContext::UMINUS() {
  return getTokens(parsetestParser::UMINUS);
}

tree::TerminalNode* parsetestParser::AssignmentContext::UMINUS(size_t i) {
  return getToken(parsetestParser::UMINUS, i);
}


size_t parsetestParser::AssignmentContext::getRuleIndex() const {
  return parsetestParser::RuleAssignment;
}


std::any parsetestParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::AssignmentContext* parsetestParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 14, parsetestParser::RuleAssignment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        _la = _input->LA(1);
        if (!(_la == parsetestParser::UPLUS

        || _la == parsetestParser::UMINUS)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        } 
      }
      setState(76);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case parsetestParser::VAR: {
        setState(77);
        lvalue();
        break;
      }

      case parsetestParser::NUMBER:
      case parsetestParser::FUNCTION:
      case parsetestParser::UPLUS:
      case parsetestParser::UMINUS:
      case parsetestParser::OPEN: {
        setState(78);
        fakeLvalue();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(81);
    match(parsetestParser::ASSIGN);
    setState(82);
    list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReferenceContext ------------------------------------------------------------------

parsetestParser::ReferenceContext::ReferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

parsetestParser::LvalueContext* parsetestParser::ReferenceContext::lvalue() {
  return getRuleContext<parsetestParser::LvalueContext>(0);
}

parsetestParser::FakeLvalueContext* parsetestParser::ReferenceContext::fakeLvalue() {
  return getRuleContext<parsetestParser::FakeLvalueContext>(0);
}


size_t parsetestParser::ReferenceContext::getRuleIndex() const {
  return parsetestParser::RuleReference;
}


std::any parsetestParser::ReferenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitReference(this);
  else
    return visitor->visitChildren(this);
}

parsetestParser::ReferenceContext* parsetestParser::reference() {
  ReferenceContext *_localctx = _tracker.createInstance<ReferenceContext>(_ctx, getState());
  enterRule(_localctx, 16, parsetestParser::RuleReference);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case parsetestParser::VAR: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        lvalue();
        break;
      }

      case parsetestParser::NUMBER:
      case parsetestParser::FUNCTION:
      case parsetestParser::UPLUS:
      case parsetestParser::UMINUS:
      case parsetestParser::OPEN: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        fakeLvalue();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

parsetestParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t parsetestParser::TermContext::getRuleIndex() const {
  return parsetestParser::RuleTerm;
}

void parsetestParser::TermContext::copyFrom(TermContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ItemTermContext ------------------------------------------------------------------

parsetestParser::ItemContext* parsetestParser::ItemTermContext::item() {
  return getRuleContext<parsetestParser::ItemContext>(0);
}

std::vector<tree::TerminalNode *> parsetestParser::ItemTermContext::UPLUS() {
  return getTokens(parsetestParser::UPLUS);
}

tree::TerminalNode* parsetestParser::ItemTermContext::UPLUS(size_t i) {
  return getToken(parsetestParser::UPLUS, i);
}

std::vector<tree::TerminalNode *> parsetestParser::ItemTermContext::UMINUS() {
  return getTokens(parsetestParser::UMINUS);
}

tree::TerminalNode* parsetestParser::ItemTermContext::UMINUS(size_t i) {
  return getToken(parsetestParser::UMINUS, i);
}

parsetestParser::ItemTermContext::ItemTermContext(TermContext *ctx) { copyFrom(ctx); }


std::any parsetestParser::ItemTermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitItemTerm(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReferenceTermContext ------------------------------------------------------------------

parsetestParser::ReferenceContext* parsetestParser::ReferenceTermContext::reference() {
  return getRuleContext<parsetestParser::ReferenceContext>(0);
}

std::vector<tree::TerminalNode *> parsetestParser::ReferenceTermContext::UPLUS() {
  return getTokens(parsetestParser::UPLUS);
}

tree::TerminalNode* parsetestParser::ReferenceTermContext::UPLUS(size_t i) {
  return getToken(parsetestParser::UPLUS, i);
}

std::vector<tree::TerminalNode *> parsetestParser::ReferenceTermContext::UMINUS() {
  return getTokens(parsetestParser::UMINUS);
}

tree::TerminalNode* parsetestParser::ReferenceTermContext::UMINUS(size_t i) {
  return getToken(parsetestParser::UMINUS, i);
}

parsetestParser::ReferenceTermContext::ReferenceTermContext(TermContext *ctx) { copyFrom(ctx); }


std::any parsetestParser::ReferenceTermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<parsetestVisitor*>(visitor))
    return parserVisitor->visitReferenceTerm(this);
  else
    return visitor->visitChildren(this);
}
parsetestParser::TermContext* parsetestParser::term() {
  TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, getState());
  enterRule(_localctx, 18, parsetestParser::RuleTerm);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<parsetestParser::ItemTermContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(91);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(88);
          _la = _input->LA(1);
          if (!(_la == parsetestParser::UPLUS

          || _la == parsetestParser::UMINUS)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          } 
        }
        setState(93);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
      }
      setState(94);
      item();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<parsetestParser::ReferenceTermContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(98);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(95);
          _la = _input->LA(1);
          if (!(_la == parsetestParser::UPLUS
